optimize uncover occurence

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link rel="stylesheet" type="text/css" href="resumeCss.css">
 		<script type="text/javascript" src="utils.js"></script>
 		<script type="text/javascript" src="resumeJs.js"></script>
+		<!--<script src="jquery-3.2.1.min.js"></script>-->
 		<!--<script type="text/javascript" src="chatroom.js"></script>-->
 		<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 		<link href='https://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
