added name label

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<header>
-			<!--<img src="images/gradient.png" class="headerGradient">-->
+			<div class="nameLabel">Thanh Tung Nguyen / Akisukei</div>
 		</header>
 		<nav>
 			<!--<hr id="navline" size="1" color="#252525">-->
