update home labels

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<header>
-			<div class="nameLabel">Thanh Tung Nguyen / Akisukei</div>
+			<div class="nameLabel">Thanh Nguyen (Justin)</div>
 		</header>
 		<nav>
 			<!--<hr id="navline" size="1" color="#252525">-->
@@ -28,7 +28,7 @@
 		<div id="cover" style="opacity: 1.0;">
 			<div class="face"><img src="images/myface.jpg"/></div>
 			<p>
-				<span class="headerText1">Hey! I'm </span>
+				<!--<span class="headerText1">Hey! I'm </span>-->
 				<span class="headerText2">Thanh Nguyen</span>
 			</p>
 			<br/>
@@ -79,7 +79,7 @@
 					<img src="images/github_icon.png" style="vertical-align:middle"/> &nbsp;&nbsp;
 					Want to see my work? Check out my projects @ 
 					<a href="https://github.com/Akisukei">
-						github.com/Akisukei
+						github.com/akisukei
 					</a>
 				</p>
 				<br/>
@@ -103,7 +103,7 @@
 				</div>
 			</div>
 			<div id="followInfo">
-				<div class="footerHeader">Follow my social medias</div>
+				<div class="footerHeader">My social medias</div>
 				<br/>
 				<p>
 					<a href="https://www.facebook.com/justin.nguyen.714655">
