--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</ul>
 		</nav>
 		<div id="cover" style="opacity: 1.0;">
-			<div class="face"><img src="images/myface.jpg"/></div>
+			<div class="face"><img src="images/myface.png"/></div>
 			<p>
 				<!--<span class="headerText1">Hey! I'm </span>-->
 				<span class="headerText2">Thanh Nguyen</span>
