--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 			<div id="gamelink">
 				<p>
 					<img src="images/github_icon.png" style="vertical-align:middle"/> &nbsp;&nbsp;
-					Want to see my work? Check out my projects @ 
-					<a href="https://github.com/Akisukei">
-						github.com/akisukei
+					Want to see my work? Check out my latest projects @ 
+					<a href="https://akisukei.itch.io/">
+						akisukei.itch.io
 					</a>
 				</p>
 				<br/>
