--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				</p>
 				<br/>
 				<p>
-					<a href="Project1/memorygame.html" style="font-size:30px; color:#FFFFFF;">Or click here to try out my memory game!</a>
+					<a href="Project1/memorygame.html" style="font-size:30px; color:#FFFFFF;">Or try out my memory game made with JS!</a>
 				</p>
 			</div>
 		</div>
